Enable/disable parts

--- a/settings.json
+++ b/settings.json
@@ -2,5 +2,9 @@
     "emailDir": "",
     "webhook": "",
     "api_key": "",
-    "domain": ""
+    "domain": "",
+    "enabledModules": [
+        "smtpServer": true,
+        "api": true
+    ]
 }
